/* Copyright 2020 Energinet DataHub A/S
 *
 * Licensed under the Apache License, Version 2.0 (the "License2");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "decimal_value.proto";

option csharp_namespace = "Energinet.DataHub.Wholesale.Contracts.IntegrationEvents";


/*
 * A calculation will result in one or more wholesale results. Each result is
 * published as an instance of this type.
 */
message WholesaleResultProducedV1 {
  /*
   * The ID of the calculation creating the result.
   * The ID is a UUID consisting of hexadecimal digits in the form XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX.
   * Example: 65801e3c-5131-426e-b1bb-7b186349c996
   */
  string calculation_id = 1;

  // The level at which the result is aggregated.
  oneof aggregation_level {
    AggregationPerChargeKeyPerEnergySupplierPerGridArea aggregation_per_charge_key_per_energy_supplier_per_gridarea = 2;
    AggregationPerEnergySupplierPerGridArea aggregation_per_energy_supplier_per_gridarea = 3;
  }

  Resolution resolution = 10;

  ProcessType process_type = 11;

  /*
   * The beginning of the calculation period.
   * The time is included in the period and is identical to the time of the first time series point
   * in the process time series type results.
   */
  google.protobuf.Timestamp period_start_utc = 12;

  /*
   * The end of the calculation period.
   * The time is excluded from the period.
   */
  google.protobuf.Timestamp period_end_utc = 13;

  /*
   * Can be null for total monthly amounts.
   */
  optional QuantityUnit quantity_unit = 15;

  repeated TimeSeriesPoint time_series_points = 20;

   // ---------------------------- NESTED TYPES BELOW ----------------------------------------

  message AggregationPerChargeKeyPerEnergySupplierPerGridArea {
      string grid_area_code = 1;
      string energy_supplier_id = 2;
      ChargeKey charge_key = 2;
  }

  // Total monthly amounts
  message AggregationPerEnergySupplierPerGridArea {
      string grid_area_code = 1;
      string energy_supplier_id = 2;
  }

  enum ProcessType {
      /*
       * Unspecified is unused but according to best practice.
       * Read more at https://protobuf.dev/programming-guides/style/#enums.
       */
      PROCESS_TYPE_UNSPECIFIED = 0;
      PROCESS_TYPE_WHOLESALE_FIXING = 3;
      PROCESS_TYPE_FIRST_CORRECTION_SETTLEMENT = 4;
      PROCESS_TYPE_SECOND_CORRECTION_SETTLEMENT = 5;
      PROCESS_TYPE_THIRD_CORRECTION_SETTLEMENT = 6;
  }

  message ChargeKey {
      string charge_code = 1;
      ChargeType charge_type = 2;
      string  charge_owner_id = 3;
  }

  enum ChargeType {
      CHARGE_TYPE_UNSPECIFIED = 0;
      CHARGE_TYPE_FEE = 1;
      CHARGE_TYPE_TARIFF = 2;
      CHARGE_TYPE_SUBSCRIPTION = 3;
  }

  enum QuantityUnit {
      /*
       * Unspecified is unused but according to best practice.
       * Read more at https://protobuf.dev/programming-guides/style/#enums.
       */
      QUANTITY_UNIT_UNSPECIFIED = 0;

      // States that the energy quantity is measured in kWh (kilo Watt hours).
      QUANTITY_UNIT_KWH = 1;

      QUANTITY_UNIT_PIECES = 2;
  }

  message TimeSeriesPoint {

      google.protobuf.Timestamp time = 1;

      /*
       * 3 digit scale decimal value of the energy quantity.
       * Value is only set when quality is not set to missing.
       */
      optional DecimalValue quantity = 2;

      // The aggregated quality currently represents a value suitable for creation of RSM-014 CIM XML messages.
      repeated QuantityQuality quantity_qualities = 3;

      /*
       * 6 digit scale decimal value of the amount.
       * Can be null when price is missing or when it's total monthly amount
       */
      optional DecimalValue price = 4;

      /*
       * 6 digit scale decimal value of the amount.
       * Can be zero when a) price is missing, b) quantity_qualities only contains 'missing' or c) quantity or price is zero
       */
      optional DecimalValue amount = 5;
  }

  /*
   * The quality of the energy quantity.
   */
  enum QuantityQuality {
      /*
       * Unspecified is unused but according to best practice.
       * Read more at https://protobuf.dev/programming-guides/style/#enums.
       */
      QUANTITY_QUALITY_UNSPECIFIED = 0;
      QUANTITY_QUALITY_ESTIMATED = 1;
      QUANTITY_QUALITY_MEASURED = 2;
      QUANTITY_QUALITY_MISSING = 3;
      QUANTITY_QUALITY_INCOMPLETE = 4;
      QUANTITY_QUALITY_CALCULATED = 5;
  }

  enum Resolution {
      /*
       * Unspecified is unused but according to best practice.
       * Read more at https://protobuf.dev/programming-guides/style/#enums.
       */
      RESOLUTION_UNSPECIFIED = 0;
      // States that each time series point represents a time interval of one quarter (15 minutes).
      RESOLUTION_MONTH = 2;
      RESOLUTION_DAY = 4;
      RESOLUTION_HOUR = 6;
  }
}
